convert the CUDA PTX code to HIP to pass the compilation process

--- a/faiss/gpu/test/CMakeLists.txt
+++ b/faiss/gpu/test/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(hipblas REQUIRED)
 include(GoogleTest)
 
 add_library(faiss_gpu_test_helper TestUtils.cpp)
-target_link_libraries(faiss_gpu_test_helper PUBLIC faiss gtest)
+target_link_libraries(faiss_gpu_test_helper PUBLIC faiss gtest hip::host hip::device roc::hipblas)
 
 macro(faiss_gpu_test file)
   get_filename_component(test_name ${file} NAME_WE)
