--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -181,7 +181,7 @@ find_package(rocthrust REQUIRED)
 find_package(rocblas REQUIRED)
 find_package(hiprand REQUIRED)
 find_package(rocrand REQUIRED)
-target_link_libraries(faiss PRIVATE hip::host hip::device roc::rocthrust roc::rocblas PUBLIC hip::hiprand roc::rocrand)
-target_link_libraries(faiss_avx2 PRIVATE hip::host hip::device roc::rocthrust roc::rocblas PUBLIC hip::hiprand roc::rocrand)
+target_link_libraries(faiss PRIVATE hip::host hip::device roc::rocthrust roc::rocblas hip::hiprand roc::rocrand)
+target_link_libraries(faiss_avx2 PRIVATE hip::host hip::device roc::rocthrust roc::rocblas hip::hiprand roc::rocrand)
 # target_compile_options(faiss PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xfatbin=-compress-all>)
 # target_compile_options(faiss_avx2 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xfatbin=-compress-all>)
