add Matrix Multiply test case to test the matrix mult kernel

--- a/faiss/gpu/test/ports/CMakeLists.txt
+++ b/faiss/gpu/test/ports/CMakeLists.txt
@@ -1,11 +1,2 @@
-# Defines `gtest_discover_tests()`.
-include(GoogleTest)
-
-# macro(faiss_gpu_test file)
-#   get_filename_component(test_name ${file} NAME_WE)
-#   add_executable(${test_name} ${file})
-#   target_link_libraries(${test_name} PRIVATE faiss_gpu_test_helper)
-#   gtest_discover_tests(${test_name})
-# endmacro()
-
 faiss_gpu_test(TestL2NormKernel.cpp)
+faiss_gpu_test(TestMatrixMult.cpp)
